--- a/index.html
+++ b/index.html
@@ -1,107 +1,107 @@
 
 <html><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Evil.Site / Home</title>
+<title>Evil.Site / Home</title>
 
-    <link href="style/evil.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body class="ns">
-    <div id="main-container">
-            <pre class="evilsite ns">
+<link href="style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+<body class="ns">
+<div id="main-container">
+        <pre class="evilsite ns">
 ▓█████    ██▒   █▓    ██▓    ██▓                 ██████     ██▓   ▄▄▄█████▓   ▓█████ 
 ▓█   ▀▓   ██░   █▒   ▓██▒   ▓██▒               ▒██    ▒    ▓██▒▓     ██▒ ▓▒   ▓█   ▀ 
 ▒███      ▓██  █▒░   ▒██▒   ▒██░               ░ ▓██▄      ▒██▒▒    ▓██░ ▒░   ▒███   
 ▒▓█  ▄     ▒██ █░░   ░██░   ▒██░                 ▒   ██▒   ░██░░    ▓██▓ ░    ▒▓█  ▄ 
 ░▒████▒     ▒▀█░     ░██░   ░██████▒    ██▓    ▒██████▒▒   ░██░     ▒██▒ ░    ░▒████▒
 ░░ ▒░ ░     ░ ▐░     ░▓     ░ ▒░▓  ░    ▒▓▒    ▒ ▒▓▒ ▒ ░   ░▓       ▒ ░░      ░░ ▒░ ░
- ░ ░  ░     ░ ░░      ▒ ░   ░ ░ ▒  ░           ░ ░▒  ░ ░    ▒ ░       ░        ░ ░  ░
-   ░          ░░      ▒ ░     ░ ░              ░  ░  ░      ▒ ░     ░            ░   
-   ░  ░        ░      ░         ░                    ░      ░                    ░  ░
-                                                                          
+░ ░  ░     ░ ░░      ▒ ░   ░ ░ ▒  ░           ░ ░▒  ░ ░    ▒ ░       ░        ░ ░  ░
+░          ░░      ▒ ░     ░ ░              ░  ░  ░      ▒ ░     ░            ░   
+░  ░        ░      ░         ░                    ░      ░                    ░  ░
+                                                                      
 </pre>
-    <div id="navbar-contained" style="display: block;">
-        <ul class="nav">
-            <li><a href="../" class="selected">home</a></li>
-            <li><a href="news/" class="">news</a></li>
-            <li><a href="~/" class="">sites</a></li>
-            <li><a href="services/" class="">services</a></li>
-            <li><a href="donate/" class="">donate</a></li>
-            <li><a href="policy/" class="">policy</a></li>
-            <li><a href="upgrades/" class="">upgrades</a></li>
-        </ul>
-        <div id="navbar-scrolling">
-            <p class="marquee">
-                <span class="scroll">
-                    Welcome to evil.site, we currently host 16 websites on our service. Check out <a href="~/signup/">signup page</a> to get a site. We also have an <a href="https://evil.pm">XMPP</a> service :)
-                </span>
-                <span></span>
-            </p>  
-        </div>
+<div id="navbar-contained" style="display: block;">
+    <ul class="nav">
+        <li><a href="../" class="selected">home</a></li>
+        <li><a href="news/" class="">news</a></li>
+        <li><a href="~/" class="">sites</a></li>
+        <li><a href="services/" class="">services</a></li>
+        <li><a href="donate/" class="">donate</a></li>
+        <li><a href="policy/" class="">policy</a></li>
+        <li><a href="upgrades/" class="">upgrades</a></li>
+    </ul>
+    <div id="navbar-scrolling">
+        <p class="marquee">
+            <span class="scroll">
+                Welcome to evil.site, we currently host 16 websites on our service. Check out <a href="~/signup/">signup page</a> to get a site. We also have an <a href="https://evil.pm">XMPP</a> service :)
+            </span>
+            <span></span>
+        </p>  
+    </div>
+  </div>
+  <div class="content-wrap flex">
+    <div id="content-container" style="flex-grow: 1;">
+      <div class="wrapper">
+        <h1 class="wrapper-header">Welcome to evil.site! Here is a little about us</h1>
+        <p class="wrapper-p">
+          <span class="green">We will host your websites for free forever!</span> <a href="~/signup/" class="blue">Click here</a> to <span class="orange">request hosting</span>.<br>
+          We keep no data on users and the only thing required is an SSH key for logging in<br>
+          We offer multiple other privacy and data saving services for free and public use<br>
+          We do not use any DDoS Protection for optimal speeds and privacy concerns<br>
+          Current SSH Fingerprint: SHA256:asqY58+o6B6L1EIo74fCBIG8jvBEPpcfP/x0QGXpWpk (ED25519)<br>
+        </p>
       </div>
-      <div class="content-wrap flex">
-        <div id="content-container" style="flex-grow: 1;">
-          <div class="wrapper">
-            <h1 class="wrapper-header">Welcome to evil.site! Here is a little about us</h1>
-            <p class="wrapper-p">
-              <span class="green">We will host your websites for free forever!</span> <a href="~/signup/" class="blue">Click here</a> to <span class="orange">request hosting</span>.<br>
-              We keep no data on users and the only thing required is an SSH key for logging in<br>
-              We offer multiple other privacy and data saving services for free and public use<br>
-              We do not use any DDoS Protection for optimal speeds and privacy concerns<br>
-              Current SSH Fingerprint: SHA256:asqY58+o6B6L1EIo74fCBIG8jvBEPpcfP/x0QGXpWpk (ED25519)<br>
-            </p>
-          </div>
-          <hr class="wrapper-seperator">
-          <div class="wrapper">
-            <h1 class="wrapper-header">Contact evil.site staff</h1>
-            <p class="wrapper-p">
-            EMAIL: <a class="ys">evil.site@disroot.org</a> - For account upgrades or issues<br>
-	    XMPP: <a class="ys">admin@evil.pm</a> - For general assistance<br>
-            Discord: <a href="https://discord.gg/opsec" class="blue">discord.gg/opsec</a> - For community chat<br>
-            </p>
-          </div>
-        </div>
-
-
-        <div id="right-sidebar" style="display: block;">
-          <div class="sidebar-wrapper">  
-            <h1 class="wrapper-header">Evil's features</h1>
-            <ul>
-              <li>Javascript free</li>
-              <li>Privacy orientated</li>
-              <li>No censorship</li>
-              <li>Fast connection</li>
-              <li>SSH access</li>
-            </ul>
-          </div>
-          <hr class="wrapper-seperator">
-          <div class="sidebar-wrapper">  
-            <h1 class="wrapper-header">Quick navigation</h1>
-            <ul>
-              <li><a href="https://evil.pm">XMPP</a></li>
-	      <li><a href="https://nitter.evil.site/">Nitter</a></li>
-	      <li><a href="https://invidious.evil.site/">Invidious</a></li>
-	      <li><a href="https://evil.site/~/signup/">Request Hosting</a></li>
-            </ul>
-          </div>
-          <hr class="wrapper-seperator">
-          <div class="sidebar-wrapper" style="padding-bottom: 10px;">
-            <h1 class="wrapper-header">Users</h1>
-            <ul>
-              <li>Online: 1
-</li>
-	      <li>Total: 16</li>
-            </ul>
-	    <hr>
-	    <label for="reveal-userlist" class="wrapper-header"> > List Users</label>
-            <input type="checkbox" class="hidden-userlist" id="reveal-userlist" role="button">
-	    <div id="userlist">
-	        <li><a href="/dead/">dead</a</li>
-	    </div>
-          </div>
-        </div>
+      <hr class="wrapper-seperator">
+      <div class="wrapper">
+        <h1 class="wrapper-header">Contact evil.site staff</h1>
+        <p class="wrapper-p">
+        EMAIL: <a class="ys">evil.site@disroot.org</a> - For account upgrades or issues<br>
+    XMPP: <a class="ys">admin@evil.pm</a> - For general assistance<br>
+        Discord: <a href="https://discord.gg/opsec" class="blue">discord.gg/opsec</a> - For community chat<br>
+        </p>
       </div>
     </div>
-  </body>
+
+
+    <div id="right-sidebar" style="display: block;">
+      <div class="sidebar-wrapper">  
+        <h1 class="wrapper-header">Evil's features</h1>
+        <ul>
+          <li>Javascript free</li>
+          <li>Privacy orientated</li>
+          <li>No censorship</li>
+          <li>Fast connection</li>
+          <li>SSH access</li>
+        </ul>
+      </div>
+      <hr class="wrapper-seperator">
+      <div class="sidebar-wrapper">  
+        <h1 class="wrapper-header">Quick navigation</h1>
+        <ul>
+          <li><a href="https://evil.pm">XMPP</a></li>
+      <li><a href="https://nitter.evil.site/">Nitter</a></li>
+      <li><a href="https://invidious.evil.site/">Invidious</a></li>
+      <li><a href="https://evil.site/~/signup/">Request Hosting</a></li>
+        </ul>
+      </div>
+      <hr class="wrapper-seperator">
+      <div class="sidebar-wrapper" style="padding-bottom: 10px;">
+        <h1 class="wrapper-header">Users</h1>
+        <ul>
+          <li>Online: 1
+</li>
+      <li>Total: 16</li>
+        </ul>
+    <hr>
+    <label for="reveal-userlist" class="wrapper-header"> > List Users</label>
+        <input type="checkbox" class="hidden-userlist" id="reveal-userlist" role="button">
+    <div id="userlist">
+        <li><a href="/dead/">dead</a</li>
+    </div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
 </html>
