--- a/profiles/port.html
+++ b/profiles/port.html
@@ -9,7 +9,7 @@
 <meta content="killa.lol [@Port]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/c" property="og:url" />
-<meta content="https://cdn.discordapp.com/avatars/759147973245796382/c4ef5269546028f1fff26f6cf5d5e116.png?size=4096" property="og:image" />
+<meta content="https://cdn.discordapp.com/emojis/1059507030559301662.webp?size=80&quality=lossless" property="og:image" />
 <meta content="・Port#5505" property="og:description" />
 <link rel="canonical" href="killa.lol" />
 <meta content="#2f3136" name="theme-color">
