--- a/profiles/cam.html
+++ b/profiles/cam.html
@@ -374,6 +374,13 @@
 </div>
 <span>Instagram</span>
 </div>
+<div class="button tiktok" onclick="window.open('https://www.youngrichlove.com/', '_blank');">
+<div class="icon">
+<img src="https://cdn.shopify.com/s/files/1/0686/8320/2873/files/3dgifmaker22331.gif?v=1673158477" style="width: 40px; height: 40px;" alt="PAID">
+</div>
+<span>YRL</span>
+</div></center><br><br>
+</div>	
 </div></center><br><br>
 </div>
 </h4>
