--- a/profiles/killhouse.html
+++ b/profiles/killhouse.html
@@ -335,7 +335,7 @@
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1007781572394631199/1060728333769379881/IMG_8362.jpg">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">T E A R S</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">KILLHOUSE</h1>
 </div>
 <div class="badge">
 <img src="https://cdn.discordapp.com/attachments/1060663915098419282/1061508696045256805/1000016749720252456.gif" style="width: 20px; height: 20px;" alt="Eternal">
