--- a/profiles/killhouse.html
+++ b/profiles/killhouse.html
@@ -352,7 +352,7 @@
 </div>
 </center>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Killhouse..">jacob, wa1kn, jules, madi, morgen, angel, kana, braydon, tammy, abby, max</span></a>
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Killhouse.."></span></a>
 </p></center>
 </div>
 <center><div class="wrapper">
