--- a/profiles/cam.html
+++ b/profiles/cam.html
@@ -352,23 +352,23 @@
 </div>
 </center>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Cam..">                .gg/blicky/nevada join these</span></a>
+<p style="color:#ffffff";>/gbe</p>
 </p></center>
 </div>
 <center><div class="wrapper">
 <div class="button Discord" onclick="window.open('https://discordapp.com/users/1052623145229635735', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061073995052630036/tele.png" style="width: 40px; height: 40px;" alt="PAID">
+<img src="https://cdn.discordapp.com/emojis/1011003857259745290.webp?size=80&quality=lossless" style="width: 40px; height: 40px;" alt="PAID">
 </div>
 <span>Discord</span>
 </div>
-<div class="button Twitter" onclick="window.open('https://t.me/Cxnvicted', '_blank');">
+<div class="button Twitter" onclick="window.open('https://twitter.com/fucciayze', '_blank');">
 <div class="icon">
 <img src="https://cdn.discordapp.com/attachments/1061492123603582986/1061496993857421403/230378391172284416.png" style="width: 40px; height: 40px;" alt="PAID">
 </div>
 <span>Twitter</span>
 </div>
-<div class="button Instagram" onclick="window.open('https://twitter.com/fucciayze', '_blank');">
+<div class="button Instagram" onclick="window.open('https://instagram.com/punchmaderaww', '_blank');">
 <div class="icon">
 <img src="https://cdn.discordapp.com/attachments/1061492123603582986/1061497091844735006/10545791504d35917855.png" style="width: 40px; height: 40px;" alt="PAID">
 </div>
