--- a/profiles/plugin.html
+++ b/profiles/plugin.html
@@ -330,7 +330,7 @@
     }
     }
  </style>   
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1066001652206796862/1066005692357554207/sel_21.jpg'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/1066001652206796862/1066011372091088896/e0af9b8aa6f1b835f58af1a8d593500b.gif'); background-size: cover;">
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
