--- a/profiles/plugin.html
+++ b/profiles/plugin.html
@@ -570,7 +570,7 @@ width: 300px;"></a>
     });
     document.getElementById('site').hidden=true
     function playAudio() {
-        myAudio = new Audio('Cddam.mp3'); 
+        myAudio = new Audio('7am.mp3'); 
         if (typeof myAudio.loop == 'boolean')
         {
             myAudio.loop = true;
