--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> [× Evil Site ×]</title>
+    <title>* Killa</title>
 
     <link href="/style/evil.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body class="ns">
     <div id="main-container">
             <pre class="evilsite ns">
-▓█████    ██▒   █▓    ██▓    ██▓                 ██████     ██▓   ▄▄▄█████▓   ▓█████ 
-▓█   ▀▓   ██░   █▒   ▓██▒   ▓██▒               ▒██    ▒    ▓██▒▓     ██▒ ▓▒   ▓█   ▀ 
-▒███      ▓██  █▒░   ▒██▒   ▒██░               ░ ▓██▄      ▒██▒▒    ▓██░ ▒░   ▒███   
-▒▓█  ▄     ▒██ █░░   ░██░   ▒██░                 ▒   ██▒   ░██░░    ▓██▓ ░    ▒▓█  ▄ 
-░▒████▒     ▒▀█░     ░██░   ░██████▒    ██▓    ▒██████▒▒   ░██░     ▒██▒ ░    ░▒████▒
-░░ ▒░ ░     ░ ▐░     ░▓     ░ ▒░▓  ░    ▒▓▒    ▒ ▒▓▒ ▒ ░   ░▓       ▒ ░░      ░░ ▒░ ░
- ░ ░  ░     ░ ░░      ▒ ░   ░ ░ ▒  ░           ░ ░▒  ░ ░    ▒ ░       ░        ░ ░  ░
-   ░          ░░      ▒ ░     ░ ░              ░  ░  ░      ▒ ░     ░            ░   
-   ░  ░        ░      ░         ░                    ░      ░                    ░  ░
-                                                                          
+██╗  ██╗██╗██╗     ██╗      █████╗    ██╗      ██████╗ ██╗     
+██║ ██╔╝██║██║     ██║     ██╔══██╗   ██║     ██╔═══██╗██║     
+█████╔╝ ██║██║     ██║     ███████║   ██║     ██║   ██║██║     
+██╔═██╗ ██║██║     ██║     ██╔══██║   ██║     ██║   ██║██║     
+██║  ██╗██║███████╗███████╗██║  ██║██╗███████╗╚██████╔╝███████╗
+╚═╝  ╚═╝╚═╝╚══════╝╚══════╝╚═╝  ╚═╝╚═╝╚══════╝ ╚═════╝ ╚══════╝
 </pre>
     <div id="navbar-contained" style="display: block;">
         <ul class="nav">
@@ -44,7 +40,7 @@
       <div class="content-wrap flex">
         <div id="content-container" style="flex-grow: 1;">
           <div class="wrapper">
-            <h1 class="wrapper-header">Welcome to evil.site! Here is a little about us</h1>
+            <h1 class="wrapper-header">☆</h1>
             <p class="wrapper-p">
               - We will host your websites for free forever!<br>
               - We keep no data on users and the only thing required is an SSH key for logging in<br>
@@ -55,7 +51,7 @@
           </div>
           <hr class="wrapper-seperator">
           <div class="wrapper">
-            <h1 class="wrapper-header">Contact evil.site staff</h1>
+            <h1 class="wrapper-header">☆</h1>
             <p class="wrapper-p">
             EMAIL: <a class="ys">evil.site@disroot.org</a> - For account upgrades or issues<br>
 	    XMPP: <a class="ys">admin@evil.pm</a> - For general assistance<br>
@@ -66,14 +62,14 @@
           <div class="content-wrap flex">
                 <div id="content-container" style="flex-grow: 1;">
                 <div class="wrapper">
-                    <h1 class="wrapper-header">Help pay for our server costs?</h1>
+                    <h1 class="wrapper-header">☆</h1>
                     <p class="wrapper-p">
-                        BTC: <span class="ys">bc1qjkq6kvfyad7wh6ca99l776m6nvxfp2qkhs3tpf</span>
+                        Sites<span class="ys">Running 14 Websites For Happy Customers.</span>
                       	<br>
-                        XMR: <span class="ys">42N5RvwXTAr1yYbziRB7FwgoX778sk7KeXemC3xsyd8PMgVh2KihH8d6v7Mnw6aD1gYkt9LKCycGCQEzMoxUBBAYNkEawYX</span>
+                        Host<span class="ys">Always Running The Websites 24/7 Host.</span>
                     </p>
                     <h1 class="wrapper-header">
-Current we have 0 BTC | We require  0.0133 BTC </h1><br>
+1# Private Biolink Service.</h1><br>
                   </div>
                 </div>
             </div>
