--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 </pre>
     <div id="navbar-contained" style="display: block;">
         <ul class="nav">
-            <li><a href="/" class="">home</a></li>
-            <li><a href="/news/" class="">news</a></li>
-            <li><a href="/~/" class="">sites</a></li>
-            <li><a href="/~/signup/" class="">signup</a></li>
-            <li><a href="/upgrades/" class="">upgrades</a></li>
-            <li><a href="/policy/" class="">policy</a></li>
-            <li><a href="/faq/" class="">faq</a></li>
+            <li><a href="/" class=""></a></li>
+            <li><a href="/news/" class=""></a></li>
+            <li><a href="/~/" class=""></a></li>
+            <li><a href="/~/signup/" class=""></a></li>
+            <li><a href="/upgrades/" class=""></a></li>
+            <li><a href="/policy/" class=""></a></li>
+            <li><a href="/faq/" class=""></a></li>
         </ul>
         <div id="navbar-scrolling">
             <p class="marquee">
                 <span class="scroll">
-                    Welcome to evil.site, we currently host 26 websites on our service. Check out <a href="https://evil.site/~/signup/">signup page</a> to get a site. We also have an <a href="https://evil.pm">XMPP</a> service :)
+                    <a href="https://evil.site/~/signup/">signup page</a> to get a site. We also have an <a href="https://evil.pm">XMPP</a> service :)
                 </span>
                 <span></span>
             </p>  
@@ -42,20 +42,19 @@
           <div class="wrapper">
             <h1 class="wrapper-header">☆</h1>
             <p class="wrapper-p">
-              - We will host your websites for free forever!<br>
-              - We keep no data on users and the only thing required is an SSH key for logging in<br>
-              - We offer multiple other privacy and data saving services for free and public use<br>
-              - We do not use any DDoS Protection for optimal speeds and privacy concerns<br>
-              - Current SSH Fingerprint: SHA256:asqY58+o6B6L1EIo74fCBIG8jvBEPpcfP/x0QGXpWpk (ED25519)<br>
+              - We will host your websites 24/7<br>
+              - We keep no data on users nor leak personal info<br>
+              - We offer multiple data/information protection for our priceless customers<br>
+              - We use a ddos protection and cloudfare for safe transition around our website<br>
             </p>
           </div>
           <hr class="wrapper-seperator">
           <div class="wrapper">
             <h1 class="wrapper-header">☆</h1>
             <p class="wrapper-p">
-            EMAIL: <a class="ys">evil.site@disroot.org</a> - For account upgrades or issues<br>
-	    XMPP: <a class="ys">admin@evil.pm</a> - For general assistance<br>
-            Discord: <a href="https://discord.gg/opsec" class="blue">discord.gg/opsec</a> - For community chat<br>
+            <a class="ys">Convicted#0024</a> For More Information<br>
+	    <a class="ys">Convicted#0024</a> For general assistance<br>
+            Discord : <a href="https://discord.gg/8UT8ryWa" class="blue">Discord.gg/609</a><br>
             </p>
           </div>
           <hr class="wrapper-seperator">
@@ -64,12 +63,12 @@
                 <div class="wrapper">
                     <h1 class="wrapper-header">☆</h1>
                     <p class="wrapper-p">
-                        Sites<span class="ys">Running 14 Websites For Happy Customers.</span>
+                        Sites : <span class="ys">Running 14 Websites For Happy Customers.</span>
                       	<br>
-                        Host<span class="ys">Always Running The Websites 24/7 Host.</span>
+                        Host : <span class="ys">Always Running The Websites 24/7 Host.</span>
                     </p>
                     <h1 class="wrapper-header">
-1# Private Biolink Service.</h1><br>
+</h1><br>
                   </div>
                 </div>
             </div>
