--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="navbar-scrolling">
             <p class="marquee">
                 <span class="scroll">
-                    <a href="https://evil.site/~/signup/">signup page</a> to get a site. We also have an <a href="https://evil.pm">XMPP</a> service :)
+WELCOME TO KILLA.LOL BOY!!!
                 </span>
                 <span></span>
             </p>  
