--- a/index.html
+++ b/index.html
@@ -1,109 +1,169 @@
 
-<html>
-	
-	<head>
-		<meta charset="UTF-8">
-		<meta property="og:title" content="死" />
-		<meta property="og:description" content="Long Live The ##SPK Republic" />
-		<meta property="og:url" content="死">
-		<meta property="og:type" content="website">
-		<link rel=“canonical” href=vamp.rip” />
-		<link rel="shortcut icon" type="image/png" href="https://i.pinimg.com/originals/d5/d2/4e/d5d24e4eda5ef019ec5274c8a4603dcc.gif">
-		<link href="css/style.css" rel="stylesheet">
-		<meta name="theme-color" content="#303135">
-		<script disable-devtool-auto src="js/disable-devtool.min.js"></script>
-		<script src="js/disable_inspect.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	</head>
-	<script>
-		document.addEventListener('contextmenu', event => event.preventDefault());
-		document.onkeydown = function (e) {
-			if (event.keyCode == 123) {
-				return false;
-			}
-			if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-				return false;
-			}
-			if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-				return false;
-			}
-			if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-				return false;
-			}
-		}
-		
-	</script>
-	
-	<body>
-		<embed src="サイレント.mp3" type="audio/mp3" autostart="true" hidden="true" style="display: none;">
-		<iframe src="サイレント.mp3" type="audio/mp3" allow="autoplay" style="display:none"></iframe>
-		<div id="clickToPlay">
-			<span class="center">enter the vampire realm</span>
-		</div>
-		<div id="border">
-			<div id="borderTop" style="top: 0; left: 0;"></div>
-			<div id="borderRight" style="right: 0; top: 0;"></div>
-			<div id="borderBottom" style="bottom: 0; right: 0;"></div>
-			<div id="borderLeft" style="left: 0; bottom: 0;"></div>
-		</div>
-		<div id="main">
-			
-			<body onload="document.body.style.opacity='1'">
-				<div class="center">
-					<pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 0%);">
-<pre>
-           ;               ,           
-         ,;                 '.         
-        ;:                   :;        
-       ::                     ::       
-       ::                     ::       
-       ':                     :        
-        :.                    :        
-     ;' ::                   ::  '     
-    .'  ';                   ;'  '.    
-   ::    :;                 ;:    ::   
-   ;      :;.             ,;:     ::   
-   :;      :;:           ,;"      ::   
-   ::.      ':;  ..,.;  ;:'     ,.;:   
-    "'"...   '::,::::: ;:   .;.;""'    
-        '"""....;:::::;,;.;"""         
-    .:::.....'"':::::::'",...;::::;.   
-   ;:' '""'"";.,;:::::;.'""""""  ':;   
-  ::'         ;::;:::;::..         :;  
- ::         ,;:::::::::::;:..       :: 
- ;'     ,;;:;::::::::::::::;";..    ':.
-::     ;:"  ::::::"""'::::::  ":     ::
- :.    ::   ::::::;  :::::::   :     ; 
-  ;    ::   :::::::  :::::::   :    ;  
-   '   ::   ::::::....:::::'  ,:   '   
-    '  ::    :::::::::::::"   ::       
-       ::     ':::::::::"'    ::       
-       ':       """""""'      ::       
-        ::                    ;:        
-        ':;      <a href="https://vamp.rip/brutal" target="_blank">brutal</a>     ;:"        
-          ';      <a href="https://vamp.rip/kira" target="_blank">kira</a>     ,;'          
-   "'   <a href="https://vamp.rip/born" target="_blank">born</a>    '"    
-       <a href="https://vamp.rip/jojo" target="_blank">jojo</a>       
-<a href="https://vamp.rip/ven" target="_blank">ven</a>
-<a href="https://vamp.rip/raiin" target="_blank">raiin</a>
-<a href="https://vamp.rip/ghouls" target="_blank">ghouls</a>
-<a href="https://vamp.rip/med" target="_blank">med</a>
-<a href="https://vamp.rip/wock" target="_blank">wock</a>
-<a href="https://vamp.rip/pokemon" target="_blank">pokemon</a>
+<!DOCTYPE html>
+<html lang="en">
 
-            
-                                                      
-</pre>
-				</div>
-				<pre>   </pre>
-				<pre>   <a href="https://discord.gg/throat"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Discord</span> </a>
-</pre>
-				<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-				<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-				<video autoplay loop id="vid">
-					<source src="サイレント.mp4" type="video/mp4">
-				</video>
-				<script src="script.js"></script>
-			</body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="死" />
+    <meta property="og:description" content="Long Live The ##SPK Republic" />
+    <meta property="og:url" content="死">
+    <script src="/cdn-cgi/apps/head/7_N3aHJ6fMx1u8oH90iZ0LNZJvY.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="/css/yo.css">
+    <link rel="shortcut icon" type="image/png" href="https://i.pinimg.com/originals/d5/d2/4e/d5d24e4eda5ef019ec5274c8a4603dcc.gif">
+    <meta name="theme-color" content="#303135">
+    <script disable-devtool-auto src="js/disable-devtool.min.js"></script>
+    <script src="js/disable_inspect.js"></script>
+    <script nonce="7fe1e00d-6b77-4d67-8d1a-23c11819d852">
+        (function(w, d) {
+            ! function(f, g, h, i) {
+                f[h] = f[h] || {};
+                f[h].executed = [];
+                f.zaraz = {
+                    deferred: [],
+                    listeners: []
+                };
+                f.zaraz.q = [];
+                f.zaraz._f = function(j) {
+                    return function() {
+                        var k = Array.prototype.slice.call(arguments);
+                        f.zaraz.q.push({
+                            m: j,
+                            a: k
+                        })
+                    }
+                };
+                for (const l of ["track", "set", "debug"]) f.zaraz[l] = f.zaraz._f(l);
+                f.zaraz.init = () => {
+                    var m = g.getElementsByTagName(i)[0],
+                        n = g.createElement(i),
+                        o = g.getElementsByTagName("title")[0];
+                    o && (f[h].t = g.getElementsByTagName("title")[0].text);
+                    f[h].x = Math.random();
+                    f[h].w = f.screen.width;
+                    f[h].h = f.screen.height;
+                    f[h].j = f.innerHeight;
+                    f[h].e = f.innerWidth;
+                    f[h].l = f.location.href;
+                    f[h].r = g.referrer;
+                    f[h].k = f.screen.colorDepth;
+                    f[h].n = g.characterSet;
+                    f[h].o = (new Date).getTimezoneOffset();
+                    if (f.dataLayer)
+                        for (const s of Object.entries(Object.entries(dataLayer).reduce(((t, u) => ({
+                                ...t[1],
+                                ...u[1]
+                            }))))) zaraz.set(s[0], s[1], {
+                            scope: "page"
+                        });
+                    f[h].q = [];
+                    for (; f.zaraz.q.length;) {
+                        const v = f.zaraz.q.shift();
+                        f[h].q.push(v)
+                    }
+                    n.defer = !0;
+                    for (const w of [localStorage, sessionStorage]) Object.keys(w || {}).filter((y => y.startsWith("_zaraz_"))).forEach((x => {
+                        try {
+                            f[h]["z_" + x.slice(7)] = JSON.parse(w.getItem(x))
+                        } catch {
+                            f[h]["z_" + x.slice(7)] = w.getItem(x)
+                        }
+                    }));
+                    n.referrerPolicy = "origin";
+                    n.src = "/ventryshield/contents.js?z=" + btoa(encodeURIComponent(JSON.stringify(f[h])));
+                    m.parentNode.insertBefore(n, m)
+                };
+                ["complete", "interactive"].includes(g.readyState) ? zaraz.init() : f.addEventListener("DOMContentLoaded", zaraz.init)
+            }(w, d, "zarazData", "script");
+        })(window, document);
+    </script>
+</head>
+
+<body>
+    <style>
 			
+			.username {
+				color: #353535
+			}
+			
+			.bio-text {
+				color: #353535
+			}
+			
+			.social-icons {
+				color: #353535
+			}
+			
+			.btn-link {
+				color: #ffffff
+			}
+			
+			.btn-link {
+				background-color: #0000
+			}
+			
+			body {
+				background-color: #0d0d0e;
+				background: url(https://cdn.discordapp.com/attachments/996991884880773131/1064261518079832084/5jSRGHL.jpg)no-repeat center center fixed;
+				background-size: cover
+			}
+
+			.musicbtn {
+                  background: #0000
+			}
+    </style> <audio loop id="audioatp" src="images/brutal.mp3"></audio>
+    <div class>
+        <div class="center">
+            <div class="container"><img class="pfp-image" style="border: 0px solid #1f202038;" src="https://cdn.discordapp.com/attachments/996991884880773131/1064261517832364142/IMG_8158.jpg" alt="pfp">
+                <p class="username"><span class="sparkle">brutal</span> </p>
+                <div class="socials">
+                    <div class="tooltip"><a target="_blank" href="https://instagram.com/thuwicked"><span class="tooltiptext">Instagram</span><i class="fa-brands fa-instagram social-icons"></i></a></div>
+                    <div class="tooltip"><a target="_blank" href="https://tiktok.com/@t2uaa"><span class="tooltiptext">Tiktok</span><i class="fa-brands fa-tiktok social-icons"></i></a></div>
+                    <div class="tooltip"><a><span id="copyclipboard" class="tooltiptext">fs#0001</span><i id="disc" class="fa-brands fa-discord social-icons"></i></a></div>
+                </div> <a target="_blank" href="https://discord.gg/skulls"><button style="border-radius: 15px" class="btn-link" type="button">/skulls</button></a>
+            </div>
+        </div>
+    </div>
+    <div class="snowflakes">
+        <div class="snowflake">
+       <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+     <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" />   </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+        <div class="snowflake">
+      <img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+        </div>
+      </div>
+    <div id="blurthepage" class="blurpage">
+        <div class="center"> <button class="musicbtn" id="musicbtn"> <i id="volumebtn" class="fas fa-volume-up"></i> </button> </div>
+    </div>
+    <script src="js/music.js"></script>
+    <script src="js/pagecopy.js"></script>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"789b5f154beb2a18","token":"033c33a962e74d16be982c1223e03590","version":"2022.11.3","si":100}' crossorigin="anonymous"></script>
+</a>
+
 </html>
