--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="/cdn-cgi/apps/head/7_N3aHJ6fMx1u8oH90iZ0LNZJvY.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" href="/css/yo.css">
+    <link rel="stylesheet" href="css/yo.css">
     <link rel="shortcut icon" type="image/png" href="https://i.pinimg.com/originals/d5/d2/4e/d5d24e4eda5ef019ec5274c8a4603dcc.gif">
     <meta name="theme-color" content="#303135">
     <script disable-devtool-auto src="js/disable-devtool.min.js"></script>
