--- a/extorting.html
+++ b/extorting.html
@@ -334,8 +334,8 @@
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/966425184594706542/1058141379659829248/IMG_4028.jpg">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/1053371125721210971/1066784360394670160/67A3310B-9D1F-4476-BB5C-939FAFC3DBA6.jpg');">extorting</h1>
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1053371125721210971/1066784360394670160/67A3310B-9D1F-4476-BB5C-939FAFC3DBA6.jpg">
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">extorting</h1>
 </div>
 <div class="badge">
 <img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Eternal">
@@ -507,25 +507,25 @@ width: 300px;"></a>
   </style>
   <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">
-<img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 	
+<img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" /> 	
     </div>
     <div class="snowflake">
-<img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+<img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" /> 
     </div>
     <div class="snowflake">
-<img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 	   
+<img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" /> 	   
     </div>
     <div class="snowflake">
-<img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" />        
+<img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" />        
     </div>
     <div class="snowflake">
-<img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+<img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" /> 
     </div>
     <div class="snowflake">
-<img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+<img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" /> 
     </div>
     <div class="snowflake">
-<img src="https://cdn.discordapp.com/emojis/1025767818114912366.gif?size=96&quality=lossless" /> 
+<img src="https://cdn.discordapp.com/emojis/1011554566162096218.webp?size=80&quality=lossless" /> 
     </div>
     <div class="snowflake">
     
@@ -566,7 +566,7 @@ width: 300px;"></a>
     });
     document.getElementById('site').hidden=true
     function playAudio() {
-        myAudio = new Audio('convicted.mp3'); 
+        myAudio = new Audio('convidddddcted.mp3'); 
         if (typeof myAudio.loop == 'boolean')
         {
             myAudio.loop = true;
