--- a/extorting.html
+++ b/extorting.html
@@ -406,7 +406,7 @@ width: 300px;"></a>
 <script type="text/javascript">
         ;(function(){
         // (QUOTED STRING)
-        var msg = "⸸EXTORT";
+        var msg = "⸸";
 
         var size = 12;
         // Set both to 1 for plain circle, set one of them to 2 for oval
@@ -566,7 +566,7 @@ width: 300px;"></a>
     });
     document.getElementById('site').hidden=true
     function playAudio() {
-        myAudio = new Audio('convidddddcted.mp3'); 
+        myAudio = new Audio('⸸.mp3'); 
         if (typeof myAudio.loop == 'boolean')
         {
             myAudio.loop = true;
