--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>* Killa</title>
+    <title>⸸</title>
+    <link rel="icon" href="https://cdn.discordapp.com/emojis/904472436337156137.gif?size=96&quality=lossless" type="image/gif" sizes="16x16">
 
     <link href="/style/evil.css" rel="stylesheet" type="text/css" media="all">
   </head>
@@ -42,17 +42,17 @@
           <div class="wrapper">
             <h1 class="wrapper-header">☆</h1>
             <p class="wrapper-p">
-              - We will host your websites 24/7<br>
-              - We keep no data on users nor leak personal info<br>
-              - We offer multiple data/information protection for our priceless customers<br>
-              - We use a ddos protection and cloudfare for safe transition around our website<br>
+              ⸸ We will host your websites 24/7<br>
+              ⸸ We keep no data on users nor leak personal info<br>
+              ⸸ We offer multiple data/information protection for our priceless customers<br>
+              ⸸ We use a ddos protection and cloudfare for safe transition around our website<br>
             </p>
           </div>
           <hr class="wrapper-seperator">
           <div class="wrapper">
             <h1 class="wrapper-header">☆</h1>
             <p class="wrapper-p">
-            <a class="ys">Convicted#0024</a>For a Website Registration or join our server<br>
+            <a class="ys"></a>Contact Convicted#0024 For a Website Registration or join our server<br>
 	    <a class="ys"></a><br>
             Join our discord server thruu <a href="https://discord.gg/8UT8ryWa" class="blue">Here</a><br>
             </p>
