--- a/index.html
+++ b/index.html
@@ -47,5 +47,10 @@ credits to convicted :)-->
  
         <script src="js/js-enter.js"></script>
 		<script src="js/title.js"></script>
-
+         
+		<audio loop preload="auto" id="audio">
+	          <source src="assets/audio/song.mp3" type="audio/mpeg">
+         </audio>
+		
+	
 </center></center></div></div></div></body></html>
