--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ credits to convicted :)-->
 		<script src="js/title.js"></script>
          
 		<audio loop preload="auto" id="audio">
-	          <source src="assets/audio/song.mp3" type="audio/mpeg">
+	          <source src="images/audio/song.mp3" type="audio/mpeg">
          </audio>
 		
 	
