--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ credits to convicted :)-->
         </script>
 
          <audio loop preload="auto" id="audio">
-	          <source src="assets/audio/song.mp3" type="audio/mpeg">
+	          <source src="images/audio/song.mp3" type="audio/mpeg">
          </source></audio>
  
         <script src="js/js-enter.js"></script>
