--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ credits to convicted :)-->
 	<center>
         <script>
             function audioPlay() {
-                var audio = document.getElementById("audio");
+                var audio = document.getElementById("song.mp3")
                 audio.volume = 0.18;
                 audio.play();
             }
