--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ credits to convicted :)-->
 	<center>
         <script>
             function audioPlay() {
-                var audio = document.getElementById("song.mp3")
+                var audio = document.getElementById("audio")
                 audio.volume = 0.18;
                 audio.play();
             }
@@ -46,10 +46,6 @@ credits to convicted :)-->
  
         <script src="js/js-enter.js"></script>
 		<script src="js/title.js"></script>
-         
-		<audio loop preload="auto" id="audio">
-	          <source src="images/audio/song.mp3" type="audio/mpeg">
-         </audio>
 		
 	
 </center></center></div></div></div></body></html>
