--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@ credits to convicted :)-->
             }
         </script>
 
-         <audio loop preload="auto" id="audio">
-	          <source src="images/audio/song.mp3" type="audio/mpeg">
-         </source></audio>
+                        <audio controls loop id="music">
+                            <source
+                                src="https://cdn.discordapp.com/attachments/1066746485884059709/1066827444209860758/song.mp3"
+                                type="audio/mpeg">
  
         <script src="js/js-enter.js"></script>
 		<script src="js/title.js"></script>
