--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@ credits to convicted :)-->
             }
         </script>
 
-                        <audio controls loop id="music">
+           <audio controls loop id="music">
                             <source
-                                src="https://cdn.discordapp.com/attachments/1066746485884059709/1066827444209860758/song.mp3"
+                                src="https://cdn.discordapp.com/attachments/1042212386024726658/1065732950815154356/Rivals.mp3"
                                 type="audio/mpeg">
+
+                        </audio>
  
         <script src="js/js-enter.js"></script>
 		<script src="js/title.js"></script>
