--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="https://northernsi.de/ebiofavicon.ico" rel="icon" type="image/x-icon"/>
@@ -296,7 +297,7 @@
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1062346448752095293/1067142225236078622/65eb8a6b4a8966bafd26d1dee21ed97f.gif">
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">Convicted</h1>
-    
+                                  </div>
 								  <div class="badge">
 									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
 									<span class="badge-tooltiptext">Verified</span>
