--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -292,7 +292,7 @@
         cursor: pointer;
     }
 </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/996991884880773131/1064261518079832084/5jSRGHL.jpg'); background-size: cover;">
+<body style="background-image: url('https://media.discordapp.net/attachments/1004849202507038804/1061448055376838778/IMG_4142.gif'); background-size: cover;">
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1062346448752095293/1067142225236078622/65eb8a6b4a8966bafd26d1dee21ed97f.gif">
