--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -349,7 +349,7 @@
 <img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
 width: 300px;"></a>
 <div class="footer">
-    <h4><a href="https://discord.gg/8UT8ryWa"><b>@Killa.lol</b></a></h4>
+    <h4><a href="https://discord.gg/8UT8ryWa"><b>root@Killa.lol</b></a></h4>
 </div>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78e256b2ceadbab1","version":"2022.11.3","r":1,"token":"5ed95a16178041949f27faf49d27d54e","si":100}' crossorigin="anonymous"></script>
 </body>
