--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -70,7 +70,7 @@
         float: left;
         margin: 0 5px;
         overflow: hidden;
-        background: #fff;
+        background: rgb(111, 111, 111);
         border-radius: 51px;
         cursor: pointer;
         box-shadow: 0px 10px 10px rgba(255, 145, 0, 0.1);
