--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -8,13 +8,13 @@
     <link href="https://northernsi.de/ebiofavicon.ico" rel="icon" type="image/x-icon"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="ebio.gg @ $" property="og:title"/>
+    <meta content="killa.lol *Convicted" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://ebio.gg/$" property="og:url"/>
+    <meta content="https://killa.lol/" property="og:url"/>
     <meta content="{avatar_url}" property="og:image"/>
     <meta content="Check out Scott's social links and profile!" property="og:description"/>
     <meta content="#2C2F33" name="theme-color">
-    <title>@$ - ebio.gg</title>
+    <title>$ Convicted</title>
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
