--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -73,7 +73,7 @@
         background: rgb(111, 111, 111);
         border-radius: 51px;
         cursor: pointer;
-        box-shadow: 0px 10px 10px rgba(0, 0, 0);
+        box-shadow: 0px 10px 10px rgb(0, 0, 0);
         transition: all 0.3s ease-out;
         color: black;
     }
