--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -328,11 +328,11 @@
 </div>
 <div class="wrapper">
     
-						  <div class="button roblox" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
+						  <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
 							<div class="icon">
-								<i class="fab fa-roblox"></i>
+								<i class="fab fa-other"></i>
 							</div>
-							<span>roblox</span>
+							<span>other</span>
 						  </div>
 						
 						  <div class="button other" onclick="window.open('https://discord.gg/8UT8ryWa', '_blank');">
