--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -330,7 +330,7 @@
     
 						  <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
 							<div class="icon">
-								<i class="fab fa-other"></i>
+								<i class="fab fa-link"></i>
 							</div>
 							<span>other</span>
 						  </div>
