--- a/members/revampingtest.html
+++ b/members/revampingtest.html
@@ -332,14 +332,14 @@
 							<div class="icon">
 								<i class="fab fa-link"></i>
 							</div>
-							<span>other</span>
+							<span>Roblox</span>
 						  </div>
 						
-						  <div class="button other" onclick="window.open('https://discord.gg/8UT8ryWa', '_blank');">
+						  <div class="button discord" onclick="window.open('https://discord.gg/8UT8ryWa', '_blank');">
 							<div class="icon">
-								<i class="fas fa-link"></i>
+								<i class="fas fa-discord"></i>
 							</div>
-							<span>other</span>
+							<span>discord</span>
 						  </div>
 						
 </div>
