--- a/$.html
+++ b/$.html
@@ -340,7 +340,7 @@ Killa.lol/$
 						
 						  <div class="button discord" onclick="window.open('https://discord.gg/8UT8ryWa', '_blank');">
 							<div class="icon">
-								<i class="fas fa-discord"></i>
+								<i class="fab fa-discord"></i>
 							</div>
 							<span>discord</span>
 						  </div>
