--- a/$.html
+++ b/$.html
@@ -333,7 +333,7 @@ Killa.lol/$
     
 						  <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
 							<div class="icon">
-								<i class="fab fa-link"></i>
+								<i class="fas fa-link"></i>
 							</div>
 							<span>Roblox</span>
 						  </div>
