--- a/$.html
+++ b/$.html
@@ -12,9 +12,9 @@
     <meta content="website" property="og:type"/>
     <meta content="https://killa.lol/" property="og:url"/>
     <meta content="{avatar_url}" property="og:image"/>
-    <meta content="Check out Scott's social links and profile!" property="og:description"/>
-    <meta content="#2C2F33" name="theme-color">
-    <title>$ Convicted</title>
+    <meta content="Convicted's Social links and profile." property="og:description"/>
+    <meta content="#2f3136" name="theme-color">
+    <title>$</title>
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
