--- a/$.html
+++ b/$.html
@@ -8,7 +8,7 @@
     <link href="https://northernsi.de/ebiofavicon.ico" rel="icon" type="image/x-icon"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="killa.lol *Convicted" property="og:title"/>
+    <meta content="・@$" property="og:title"/>
     <meta content="website" property="og:type"/>
     <meta content="https://killa.lol/" property="og:url"/>
     <meta content="{avatar_url}" property="og:image"/>
