--- a/$.html
+++ b/$.html
@@ -348,7 +348,7 @@ Killa.lol/$
     
 						  <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
 							<div class="icon">
-								<i class="fas fa-other"></i>
+								<i class="fab fa-other"></i>
 							</div>
 							<span>other</span>
 						  </div>
