--- a/$.html
+++ b/$.html
@@ -348,9 +348,9 @@ Killa.lol/$
     
 						  <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
 							<div class="icon">
-								<i class="fab fa-other"></i>
+								<i class="fas fa-link"></i>
 							</div>
-							<span>other</span>
+							<span>Roblox</span>
 						  </div>
 						
 						  <div class="button discord" onclick="window.open('https://discord.gg/8UT8ryWa', '_blank');">
