--- a/$.html
+++ b/$.html
@@ -14,7 +14,8 @@
     <meta content="{avatar_url}" property="og:image"/>
     <meta content="Check out Scott's social links and profile!" property="og:description"/>
     <meta content="#2C2F33" name="theme-color">
-    <title>$ Convicted</title>
+    <title>$</title>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1066410151327846410/1066733748378415145/stole20ts.png" type="image/gif" sizes="16x16">
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
