--- a/w.html
+++ b/w.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+   <!DOCTYPE html>
 <html lang="en">
 <head>
     <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
@@ -7,11 +8,11 @@
     <link href="https://northernsi.de/ebiofavicon.ico" rel="icon" type="image/x-icon"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="killa.lol *Convicted" property="og:title"/>
+    <meta content="killa.lol *SEIZED" property="og:title"/>
     <meta content="website" property="og:type"/>
     <meta content="https://killa.lol/" property="og:url"/>
     <meta content="{avatar_url}" property="og:image"/>
-    <meta content="Check out Scott's social links and profile!" property="og:description"/>
+    <meta content="Check out Aryans social links and profile!" property="og:description"/>
     <meta content="#2C2F33" name="theme-color">
     <title>$</title>
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1066410151327846410/1066733748378415145/stole20ts.png" type="image/gif" sizes="16x16">
@@ -292,7 +293,7 @@
         cursor: pointer;
     }
 </style>
-<body style="background-image: url('https://media.discordapp.net/attachments/1004849202507038804/1061448055376838778/IMG_4142.gif'); background-size: cover;">
+<body style="background-image: url('https://media.discordapp.net/attachments/972533899462836334/1020717111104000092/A74C7125-6698-4B84-9193-D99DB9FDFC34.gif'); background-size: cover;">
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://media.discordapp.net/attachments/1037386407297159350/1037465220496498728/a_85506559cb1e456ca14ec4fe6967df5d.gif">
@@ -307,8 +308,6 @@ killa.lol/w
 								  </div>
 
                                   <div class="badge">
-							              	<img src="https://cdn.discordapp.com/emojis/970888425634938941.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
-									<span class="badge-tooltiptext">Owner</span>
 								  </div>
                                   
                                   <div class="badge">
@@ -343,7 +342,7 @@ killa.lol/w
 
 </div></center><br><br>
 <a href="https://discord.com/users/960179477156077678" target="_blank">
-<img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
+<img src="https://discord.c99.nl/widget/theme-4/960179477156077678.png" style="
 width: 300px;"></a>
 <div class="footer">
     <h4><a href="https://killa.lol/"><b>root@Killa.lol</b></a></h4>
