--- a/w.html
+++ b/w.html
@@ -324,6 +324,11 @@ killa.lol/w
                                     <img src="https://cdn.discordapp.com/emojis/1061655690164326601.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Donator">
                                     <span class="badge-tooltiptext">Donator</span>
                                   </div>
+	                          
+	                         <div class="badge">
+                                    <img src="https://cdn.discordapp.com/emojis/970888425634938941.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Donator">
+                                    <span class="badge-tooltiptext">Donator</span>
+                                  </div>
 
     <center><p class="quote" style="color: #ffffff">
         seized#0001
