--- a/$.html
+++ b/$.html
@@ -12,7 +12,7 @@
     <meta content="website" property="og:type"/>
     <meta content="https://killa.lol/" property="og:url"/>
     <meta content="{avatar_url}" property="og:image"/>
-    <meta content="Check out Scott's social links and profile!" property="og:description"/>
+    <meta content="Convicted's Social links and profile." property="og:description"/>
     <meta content="#2C2F33" name="theme-color">
     <title>$</title>
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1066410151327846410/1066733748378415145/stole20ts.png" type="image/gif" sizes="16x16">
