--- a/$.html
+++ b/$.html
@@ -297,7 +297,7 @@
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1062346448752095293/1067142225236078622/65eb8a6b4a8966bafd26d1dee21ed97f.gif">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">CONVICTED</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">           </h1>
 <center><p class="quote" style="color: #ffffff">
 Killa.lol/$
 </p>  
