--- a/@.html
+++ b/@.html
@@ -342,7 +342,7 @@
 <body style="background-image: url('https://cdn.discordapp.com/attachments/996991884880773131/1064261518079832084/5jSRGHL.jpg'); background-size: cover;">
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1062346448752095293/1067142225236078622/65eb8a6b4a8966bafd26d1dee21ed97f.gif">
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/avatars/1035221733529112656/107dd8b8442eb4971ec89c95d67d4928.png?size=1024">
     <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429877243981855/sparkle_rainbow.gif');">G L H F</h1>
 <center><p class="quote" style="color: #ffffff">
 Killa.lol/@
