--- a/@.html
+++ b/@.html
@@ -7,6 +7,10 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="https://northernsi.de/ebiofavicon.ico" rel="icon" type="image/x-icon"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+    <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
+    <link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
+    <style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="killa.lol *GLHF" property="og:title"/>
     <meta content="website" property="og:type"/>
