--- a/$.html
+++ b/$.html
@@ -297,7 +297,7 @@
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1062346448752095293/1067142225236078622/65eb8a6b4a8966bafd26d1dee21ed97f.gif">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">CONVICTED</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429877243981855/sparkle_rainbow.gif');">CONVICTED</h1>
 <center><p class="quote" style="color: #ffffff">
 Killa.lol/$
 </p>  
@@ -341,6 +341,17 @@ Killa.lol/$
                                     <img src="https://cdn.discordapp.com/emojis/1060652177649041448.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Bitcoin">
                                     <span class="badge-tooltiptext">Bitcoin</span>
                                   </div>
+
+                                  <div class="badge">
+                                    <img src="https://cdn.discordapp.com/emojis/991891535106949171.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Bitcoin">
+                                    <span class="badge-tooltiptext">Biolink</span>
+                                  </div>
+                  
+                                  <div class="badge">
+                                    <img src="https://cdn.discordapp.com/emojis/1051876319090192424.gif?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Bitcoin">
+                                    <span class="badge-tooltiptext">Doxbin</span>
+                                  </div>
+                                  
     <center><p class="quote" style="color: #ffffff">
         Convicted#0024
     </p>
@@ -368,7 +379,7 @@ Killa.lol/$
 <img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
 width: 300px;"></a>
 <div class="footer">
-    <h4><a href="https://killa.lol/"><b>root@Killa.lol</b></a></h4>
+    <h4>@Killa<a href="https://killa.lol/"style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://media.discordapp.net/attachments/1067132384492933131/1067429877243981855/sparkle_rainbow.gif');">CONVICTED</h1></b></a></h4>
 </div>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78e256b2ceadbab1","version":"2022.11.3","r":1,"token":"5ed95a16178041949f27faf49d27d54e","si":100}' crossorigin="anonymous"></script>
 </body>
